feature: add quote toggle action, refactor list-item params, refactor store state

--- a/src/components/quote-list-item/quote-list-item.scss
+++ b/src/components/quote-list-item/quote-list-item.scss
@@ -1,3 +1,12 @@
-ion-label {
+.text {
     white-space: normal;
+    padding: 10px;
+}
+
+.fav-icon {
+    fill: white;
+
+    &--is-fav {
+        fill: var(--ion-color-primary, yellow);
+    }
 }
